--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "bing-image-proxy"
-main = "workers/bing-image-proxy.js"
+main = "bing-image-proxy.js"
 compatibility_date = "2024-01-01"
 
 # Worker configuration for Bing image proxy
